--- a/index.html
+++ b/index.html
@@ -4,142 +4,158 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Prova SENAI</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css">
+  <script src="script.js"></script>
 </head>
 <body>
   <header>
-    <h1><img src="logo_senai.png" alt="SENAI" /></h1>
-    <nav><a href="#">Home</a></nav>
+    <h1>
+      <img src="logo-senai.png">
+    </h1>
+    <nav><a>Home</a></nav>
   </header>
-    <!--card 1-->
-  <div class="card">
-    <div class="tags">
-      <span>online</span>
-      <span>tecnologia</span>
-      <span>programação</span>
+
+  <div class="container">
+
+    <!-- Card 1 -->
+    <div class="card">
+      <div class="tags">
+        <span>online</span>
+        <span>tecnologia</span>
+        <span>programação</span>
+      </div>
+      <h2>Desenvolvimento Web Full Stack</h2>
+      <p>Aprenda a criar aplicações web modernas utilizando HTML, CSS, JavaScript, Node.js e muito mais.</p>
+      <p class="carga">Carga horária: <strong>80 horas</strong></p>
+      <div class="buttons">
+        <button class="saiba">SAIBA MAIS</button>
+        <button class="inscrever">INSCREVER-SE</button>
+      </div>
     </div>
-    <h2>Desenvolvimento Web Full Stack</h2>
-    <p>Aprenda a criar aplicações web modernas utilizando HTML, CSS, JavaScript, Node.js e muito mais.</p>
-    <p class="carga">Carga horária: <strong>80 horas</strong></p>
-    <div class="buttons">
-      <button class="saiba">SAIBA MAIS</button>
-      <button class="inscrever">INSCREVER-SE</button>
+
+    <!-- Card 2 -->
+    <div class="card">
+      <div class="tags">
+        <span>presencial</span>
+        <span>negocios</span>
+      </div>
+      <h2>Gestão de Projetos Ágeis</h2>
+      <p>Curso voltado à aplicação de metodologias ágeis como Scrum e Kanban em ambientes corporativos.</p>
+      <p class="carga">Carga horária: <strong>40 horas</strong></p>
+      <div class="buttons">
+        <button class="saiba">SAIBA MAIS</button>
+        <button class="inscrever">INSCREVER-SE</button>
+      </div>
     </div>
+
+    <!-- Card 3 -->
+    <div class="card">
+      <div class="tags">
+        <span>EAD</span>
+        <span>idiomas</span>
+      </div>
+      <h2>Inglês para Viagens</h2>
+      <p>Comunique-se com confiança em aeroportos, hotéis e restaurantes durante suas viagens internacionais.</p>
+      <p class="carga">Carga horária: <strong>40 horas</strong></p>
+      <div class="buttons">
+        <button class="saiba">SAIBA MAIS</button>
+        <button class="inscrever">INSCREVER-SE</button>
+      </div>
+    </div>
+
+    <!-- Card 4 -->
+    <div class="card">
+      <div class="tags">
+        <span>Cursos livres</span>
+        <span>presencial</span>
+      </div>
+      <h2>Introdução à Fotografia Digital</h2>
+      <p>Explore os fundamentos da fotografia e aprenda a tirar fotos incríveis com sua câmera ou smartphone.</p>
+      <p class="carga">Carga horária: <strong>25 horas</strong></p>
+      <div class="buttons">
+        <button class="saiba">SAIBA MAIS</button>
+        <button class="inscrever">INSCREVER-SE</button>
+      </div>
+    </div>
+
+    <!-- Card 5 -->
+    <div class="card">
+      <div class="tags">
+        <span>online</span>
+        <span>design</span>
+        <span>criatividade</span>
+      </div>
+      <h2>Design Gráfico com Canva</h2>
+      <p>Crie materiais visuais impactantes para redes sociais, empresas ou uso pessoal usando o Canva.</p>
+      <p class="carga">Carga horária: <strong>15 horas</strong></p>
+      <div class="buttons">
+        <button class="saiba">SAIBA MAIS</button>
+        <button class="inscrever">INSCREVER-SE</button>
+      </div>
+    </div>
+
+    <!-- Card 6 -->
+    <div class="card">
+      <div class="tags">
+        <span>presencial</span>
+        <span>administração</span>
+        <span>empreendedorismo</span>
+      </div>
+      <h2>Marketing Digital para Pequenos Negócios</h2>
+      <p>Domine estratégias de marketing online para atrair clientes e aumentar suas vendas.</p>
+      <p class="carga">Carga horária: <strong>30 horas</strong></p>
+      <div class="buttons">
+        <button class="saiba">SAIBA MAIS</button>
+        <button class="inscrever">INSCREVER-SE</button>
+      </div>
+    </div>
+
+    <!-- Card 7 -->
+    <div class="card">
+      <div class="tags">
+        <span>tecnologia</span>
+        <span>EAD</span>
+      </div>
+      <h2>Lógica de Programação</h2>
+      <p>Ideal para iniciantes, este curso ensina os princípios fundamentais da programação de forma descomplicada.</p>
+      <p class="carga">Carga horária: <strong>35 horas</strong></p>
+      <div class="buttons">
+        <button class="saiba">SAIBA MAIS</button>
+        <button class="inscrever">INSCREVER-SE</button>
+      </div>
+    </div>
+
+    <!-- Card 8 -->
+    <div class="card">
+      <div class="tags">
+        <span>cursos livres</span>
+        <span>presencial</span>
+        <span>saúde</span>
+      </div>
+      <h2>Primeiros Socorros</h2>
+      <p>Aprenda como agir em situações de emergência e prestar os primeiros atendimentos corretamente.</p>
+      <p class="carga">Carga horária: <strong>10 horas</strong></p>
+      <div class="buttons">
+        <button class="saiba">SAIBA MAIS</button>
+        <button class="inscrever">INSCREVER-SE</button>
+      </div>
+    </div>
+
+    <!-- Card 9 -->
+    <div class="card">
+      <div class="tags">
+        <span>online</span>
+        <span>financeiro</span>
+      </div>
+      <h2>Educação Financeira Pessoal</h2>
+      <p>Organize suas finanças, controle gastos, e aprenda a investir com inteligência.</p>
+      <p class="carga">Carga horária: <strong>18 horas</strong></p>
+      <div class="buttons">
+        <button class="saiba">SAIBA MAIS</button>
+        <button class="inscrever">INSCREVER-SE</button>
+      </div>
+    </div>
+
   </div>
-<!--card 2-->
-<div class="card">
-  <div class="tags">
-    <span>presencial</span>
-    <span>negocios</span>
-  </div>
-  <h2>Gestão de Projetos Ágeis</h2>
-  <p>Curso voltado á aplicação de metodologias ágeis como Scrum e Kanbam em ambientes corporativos.</p>
-  <p class="carga">Carga horária: <strong>40 horas</strong></p>
-  <div class="buttons">
-    <button class="saiba">SAIBA MAIS</button>
-    <button class="inscrever">INSCREVER-SE</button>
-  </div>
-</div>
-<!--card 3-->
-<div class="card">
-  <div class="tags">
-    <span>EAD</span>
-    <span>idiomnas</span>
-  </div>
-  <h2>Inglês para Viagens</h2>
-  <p>Comunique-se com a confiança em aeroportos, hóteis e restauranteas durante suas viagens internacionais</p>
-  <p class="carga">Carga horária: <strong>40 horas</strong></p>
-  <div class="buttons">
-    <button class="saiba">SAIBA MAIS</button>
-    <button class="inscrever">INSCREVER-SE</button>
-  </div>
-</div>
-<!--card 4-->
-<div class="card">
-  <div class="tags">
-    <span>Curos livres</span>
-    <span>presencial</span>
-  </div>
-  <h2>Introdução á Fotografia Digital</h2>
-  <p> Explore os fundamentos da fotografia e aprenda a tirar fotos incríveis com sua câmera ou smartphone.</p>
-  <p class="carga">Carga horária: <strong>25 horas</strong></p>
-  <div class="buttons">
-    <button class="saiba">SAIBA MAIS</button>
-    <button class="inscrever">INSCREVER-SE</button>
-  </div>
-</div>
-<!--card 5-->
-<div class="card">
-  <div class="tags">
-    <span>online</span>
-    <span>design</span>
-    <span>criatividade</span>
-  </div>
-  <h2>Design Gráfico com Canva</h2>
-  <p>Crie materiais visuais impactantes para redes sociais, empresas ou uso pessoal usando o Canva.</p>
-  <p class="carga">Carga horária: <strong>15 horas</strong></p>
-  <div class="buttons">
-    <button class="saiba">SAIBA MAIS</button>
-    <button class="inscrever">INSCREVER-SE</button>
-  </div>
-</div>
-<!--card 6--->
-<div class="card">
-  <div class="tags">
-    <span>presencial</span>
-    <span>administração</span>
-    <span>empreendedorismo</span>
-  </div>
-  <h2>Marketing Digital para Pequenos Negócios</h2>
-  <p> Domine estratégias de marketing online para atrair clientes e aumentar suas vendas.</p>
-  <p class="carga">Carga horária: <strong>30 horas</strong></p>
-  <div class="buttons">
-    <button class="saiba">SAIBA MAIS</button>
-    <button class="inscrever">INSCREVER-SE</button>
-  </div>
-</div>
-<!--card 7-->
-<div class="card">
-  <div class="tags">
-    <span> tecnologia</span>
-    <span>EAD</span>
-  </div>
-  <h2>Lógica de Programação</h2>
-  <p>Ideal para iniciantes, este curso ensina os princípios fundamentais da programação de forma descomplicada.</p>
-  <p class="carga">Carga horária: <strong>35 horas</strong></p>
-  <div class="buttons">
-    <button class="saiba">SAIBA MAIS</button>
-    <button class="inscrever">INSCREVER-SE</button>
-  </div>
-</div>
-<!--card 8-->
-<div class="card">
-  <div class="tags">
-    <span>cursos livres</span>
-    <span> presencial</span>
-    <span>saúde</span>
-  </div>
-  <h2>Primeiros Socorros</h2>
-  <p>Aprenda como agir em situações de emergência e prestar os primeiros atendimentos corretamente.</p>
-  <p class="carga">Carga horária: <strong>10 horas</strong></p>
-  <div class="buttons">
-    <button class="saiba">SAIBA MAIS</button>
-    <button class="inscrever">INSCREVER-SE</button>
-  </div>
-</div>
-<!--card 9-->
-<div class="card">
-  <div class="tags">
-    <span>online</span>
-    <span>financeiro</span>
-  </div>
-  <h2>Educação Financeira Pessoal</h2>
-  <p> Organize suas finanças, controle gastos, e aprenda a investir com inteligência.</p>
-  <p class="carga">Carga horária: <strong>18 horas</strong></p>
-  <div class="buttons">
-    <button class="saiba">SAIBA MAIS</button>
-    <button class="inscrever">INSCREVER-SE</button>
-  </div>
-</div>
 </body>
 </html>
