--- a/index.html
+++ b/index.html
@@ -158,4 +158,33 @@
 
   </div>
 </body>
+<footer class="footer">
+  <div class="footer-content">
+    <div class="footer-section">
+      <h3>Sobre nós</h3>
+      <p>Somos uma plataforma dedicada a oferecer cursos online e presenciais nas mais diversas áreas do conhecimento.</p>
+    </div>
+    <div class="footer-section">
+      <h3>Links úteis</h3>
+      <ul>
+        <li><a href="#">Cursos</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Contato</a></li>
+        <li><a href="#">Política de Privacidade</a></li>
+      </ul>
+    </div>
+    <div class="footer-section">
+      <h3>Redes sociais</h3>
+      <ul>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">LinkedIn</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    <p>© 2025 Todos os direitos reservados.</p>
+  </div>
+</footer>
 </html>
